fix container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
-    container_name: welcome
     image: nixoletas/welcome:latest
+    container_name: welcome-nick
     ports:
       - "80:80"
     restart: unless-stopped
